Fix wrapper alignment on resize

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,8 @@ div.section-title {
 }
 
 article p {
-    width: 200px;
+    max-width: 200px;
+    max-height: 200px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -100,6 +101,7 @@ article p {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding: 20px;
+
   }
 
 .main {
